[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.2"
name = "collect"
description = "Contains various web-scraping utilities used at MBK Engineers"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "numpy==1.24.2",
  "beautifulsoup4==4.12.3",
  "pandas==1.5.3",
  "pyOpenSSL==23.3.0",
  "python-dateutil==2.9.0",
  "python-dotenv==0.19.2",
  "requests==2.32.3",
  "selenium==4.15.2",
  "tabula-py==2.10.0"
]
authors = [
  {name = "Carly Narlesky", email = "narlesky@mbkengineers.com"},
  {name = "Olivia Alexander", email = "alexander@mbkengineers.com"},
  {name = "Sophie Danielsen", email = "danielsen@mbkengineers.com"},
  {name = "Carissa Abraham", email = "abraham@mbkengineers.com"},
  {name = "Jeremy Inducil", email = "inducil@mbkengineers.com"},
  {name = "Martin Liu", email = "liu@mbkengineers.com"},
  {name = "Gerardo Veliz Carrillo", email = "carrillo@mbkengineers.com"},
  {name = "Catherine Morales-Sandoval", email = "morales-sandoval@mbkengineers.com"},
]
maintainers = [
  {name = "Carly Narlesky", email = "narlesky@mbkengineers.com"}
]
keywords = [""]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
swp = [
  "pdftotext==2.2.2"
]
filters = [
  "scipy==1.10.4"
]
docs = [
    "Sphinx==4.3.0",
    "sphinx-readable-theme==1.3.0",
    "sphinx-rtd-theme==1.0.0"
]

[project.urls]
Homepage = "https://github.com/MBKEngineers/collect"
Documentation = "https://github.com/MBKEngineers/collect/docs"
Repository = "https://github.com/MBKEngineers/collect.git"
Issues = "https://github.com/MBKEngineers/collect/issues"

